# PROFIT-seq

./: .gitignore  .gitmodules  LICENSE  Makefile  PROFIT-seq.py  RCA_adapters.fa  README.md  main.py  pyproject.toml  requirements.txt  step1_demultiplex.py  step2_consensus.py  step3_analysis.py  step3_trim_polyA.py  step4_quantification.py
PROFIT_seq/: env.py  logger.py  parser.py  seqIO.py  unblock.py  utils.py
PROFITseq/: env.py  seqIO.py  unblock.py  utils.py
app/: plot.py  server.py
app/templates/: index.html
libs/: utils.py
misc/: bed_to_toml.py  process_TRUST4.py
scripts/: generate_consensus.py  split_channels.py  step1_demultiplex.py  step2_consensus.py  step3_trim_polyA.py
src/: consensus.py  generate_consensus.py  logger.py  seqIO.py  utils.py
test_data/: cancer_panel.bed  chromosomes.bed  example_balance_chr.toml  example_complex_jobs.toml  example_enrich_chr.toml  example_polyps.toml  example_reject_all.toml  example_reject_chr.toml  example_sputum.toml  example_test.toml
