[project]
name = "PROFTTseq"
description = "Dash board for control adaptive sequencing"
version = "0.1.0"
authors = [
    { name = "Jinyang Zhang", email = "zhangjinyang@biols.ac.cn" }
]
dependencies = [
    "Flask>=2.0.3",
    "Flask-Bootstrap4>=4.0.2",
    "pandas>=1.3.5",
    'read-until==3.0.0',
    'minknow-api==4.1.2',
    'pyguppyclient==0.1.0',
    'ont-pyguppy-client-lib==5.1.15',
    'mappy==2.17',
    'toml>=0.10.2',
]

[project.optional-dependencies]
dev = [
    'coverage>=5.0.3',
    'pytest',
    'pytest-benchmark[histogram]>=3.2.1',
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
