[project]
name = "PROFTT-seq"
description = "Full length transcriptome sequencing"
version = "0.1.1"
authors = [
    { name = "Jinyang Zhang", email = "zhangjinyang@biols.ac.cn" }
]
dependencies = [
    "bwapy==0.1.4",
    "click==8.1.3",
    "Flask==2.2.2",
    "Flask-Bootstrap4==4.0.2",
    "mappy==2.17",
    "minknow-api==5.5.2",
    "numpy==1.17.4",
    "ont-pyguppy-client-lib==6.5.7",
    "pandas==1.3.5",
    "plotly==5.6.0",
    "pyccs==1.1.0",
    "pyspoa==0.0.8",
    "read-until==3.0.0",
    "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
    'coverage>=5.0.3',
    'pytest',
    'pytest-benchmark[histogram]>=3.2.1',
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
